--- a/akira/assets/css/styles.css
+++ b/akira/assets/css/styles.css
@@ -1,5 +1,6 @@
 /*Header*/
 
+@import url('./guilds.css');
 @import url('https://use.fontawesome.com/releases/v5.1.0/css/all.css');
 @import url('./bulma.min.css');
 @import url('./main.b8f6e037.chunk.css');
