--- a/akira/assets/css/styles.css
+++ b/akira/assets/css/styles.css
@@ -93,10 +93,10 @@ body {
 }
 
 main {
-    display: flex;
+    display: inline;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
 }
 
 .test {
