--- a/akira/assets/css/styles.css
+++ b/akira/assets/css/styles.css
@@ -271,3 +271,47 @@ footer .call-to-action-footer h3 {
         flex-direction: column;
     }
 }
+
+
+/* Cards */
+
+#stats[data-v-972439db] {
+    display: flex;
+    grid-gap: 25px;
+    padding: 35px 10%;
+    margin: 0 auto;
+    max-width: 1000px;
+}
+
+.card .value[data-v-972439db] {
+    font-size: 2.25rem;
+    font-weight: 700;
+}
+
+#content *[data-v-972439db] {
+    margin: 0;
+}
+
+.card {
+    transition: all .5s;
+    background-color: #f74fff;
+}
+
+.card .title[data-v-972439db] {
+    color: #ccc;
+    font-size: 1.5rem;
+}
+
+.card[data-v-972439db] {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: #fff;
+    background-color: var(--bg-default);
+    padding: 15px 20px;
+    width: 100%;
+    border-radius: 0.375em;
+    box-shadow: 0 0 5px #00000075;
+    transition: .4s;
+}
