--- a/akira/assets/css/styles.css
+++ b/akira/assets/css/styles.css
@@ -167,14 +167,6 @@ button>svg>path {
     transition: var(--motion-duration) var(--motion-ease);
 }
 
-button:hover>svg>path {
-    d: path("M0,0 C0,-5 100,-5 100,0 C105,0 105,100 100,100 C100,105 0,105 0,100 C-5,100 -5,0 0,0");
-}
-
-button:active>svg>path {
-    d: path("M0,0 C30,10 70,10 100,0 C95,30 95,70 100,100 C70,90 30,90 0,100 C5,70 5,30 0,0");
-}
-
 
 /* footer */
 
@@ -281,6 +273,13 @@ footer .call-to-action-footer h3 {
     padding: 35px 10%;
     margin: 0 auto;
     max-width: 1000px;
+}
+
+@media (max-width: 767px) {
+    #stats[data-v-972439db] div {
+        width: 100%;
+        float: none;
+    }
 }
 
 .card .value[data-v-972439db] {
