--- a/akira/assets/css/styles.css
+++ b/akira/assets/css/styles.css
@@ -275,9 +275,14 @@ footer .call-to-action-footer h3 {
     max-width: 1000px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 918px) {
     #stats[data-v-972439db] {
         display: grid;
+    }
+    .sec01 h2 {
+        text-align: center;
+        font-size: medium;
+        top: -1%;
     }
 }
 
