--- a/akira/assets/css/guilds.css
+++ b/akira/assets/css/guilds.css
@@ -71,9 +71,9 @@
     -webkit-flex: 0 0 100%;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
-    max-width: 100%;
+    max-width: 50%;
     position: relative;
-    width: 100%;
+    width: 50%;
     padding-right: 14px;
     padding-left: 14px;
 }
@@ -244,8 +244,9 @@ img {
     margin-left: -14px;
 }
 
-#Features-Tab {
-    display: inline-block
+#ft-1 {
+    display: flex;
+    flex-direction: row;
 }
 
 .shadow-none {
