--- a/akira/assets/css/guilds.css
+++ b/akira/assets/css/guilds.css
@@ -338,6 +338,13 @@ img {
 }
 
 @media only screen and (max-width: 767px) {
+    #ft-1 {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 767px) {
     #ft-2,
     #ft-3 {
         width: 100%;
