--- a/akira/assets/css/guilds.css
+++ b/akira/assets/css/guilds.css
@@ -181,6 +181,10 @@ img {
     margin-bottom: 0!important;
 }
 
+.mb-5 {
+    margin-bottom: 1.5rem;
+}
+
 .mr-4,
 .mx-4 {
     margin-right: 3.5rem!important;
