--- a/akira/assets/css/guilds.css
+++ b/akira/assets/css/guilds.css
@@ -255,6 +255,8 @@
     #ft-1 {
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        height: 100vh;
         width: 100%;
         float: left
     }
