--- a/akira/assets/css/guilds.css
+++ b/akira/assets/css/guilds.css
@@ -261,6 +261,13 @@
         float: left
     }
     
+    #ft-0 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    
     .shadow-none {
         box-shadow: none!important;
     }
