--- a/akira/assets/css/styles.css
+++ b/akira/assets/css/styles.css
@@ -84,7 +84,7 @@
         
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
+            margin: 0!important;
             padding: 0;
             background-color: #333;
         }
@@ -329,6 +329,14 @@
                 flex-direction: column;
             }
             .card {
-                margin: 0%;
+                width: 500px;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+            }
+            .statsdiv {
+                width: 80%;
+                padding: 1rem;
             }
         }
