--- a/akira/documentation/main.css
+++ b/akira/documentation/main.css
@@ -1527,7 +1527,7 @@ input[type="submit"].button {
 
 .content table td,
 .content table th {
-    border: 1px solid #dbdbdb;
+    border: 1px solid #000000;
     border-width: 0 0 1px;
     padding: .5em .75em;
     vertical-align: top
@@ -1539,7 +1539,7 @@ input[type="submit"].button {
 }
 
 .content table tr:hover {
-    background-color: #f5f5f5
+    background-color: #32323247
 }
 
 .content table thead td,
@@ -2134,6 +2134,9 @@ input[type="submit"].button {
         display: -ms-flexbox;
         display: flex
     }
+    .card {
+        max-width: -webkit-fill-available;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -2634,7 +2637,7 @@ input[type="submit"].button {
 }
 
 .table.is-striped tbody tr:nth-child(even):hover {
-    background-color: #f5f5f5
+    background-color: #ff0000
 }
 
 .tag {
