--- a/akira/commands/main.css
+++ b/akira/commands/main.css
@@ -8,6 +8,14 @@
         }
     }
     
+    .card {
+        background-color: #fff;
+        box-shadow: 0 2px 3px rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 10%);
+        color: #4a4a4a;
+        max-width: 100%;
+        position: relative;
+    }
+    
     .column {
         display: block;
         -ms-flex-preferred-size: 0;
