--- a/akira/commands/main.css
+++ b/akira/commands/main.css
@@ -9,7 +9,7 @@
 }
 
 .card {
-    background-color: #fff;
+    background-color: #262626;
     box-shadow: 0 2px 3px rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 10%);
     color: #4a4a4a;
     max-width: 100%;
