--- a/akira/commands/main.css
+++ b/akira/commands/main.css
@@ -9,9 +9,9 @@
 }
 
 .card {
-    background-color: #262626;
+    background-color: #545454;
     box-shadow: 0 2px 3px rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 10%);
-    color: #4a4a4a;
+    color: #f3f3f3;
     max-width: 100%;
     position: relative;
 }
