--- a/akira/commands/main.css
+++ b/akira/commands/main.css
@@ -1,3 +1,4 @@
+@import url('https://use.fontawesome.com/releases/v5.1.0/css/all.css');
 @media screen and (min-width: 769px) {
     .column.is-one-quarter,
     .column.is-one-quarter-tablet {
