--- a/style.css
+++ b/style.css
@@ -3,11 +3,21 @@
     margin: 0;
 }
 
+:root {
+    --background-color: #eee;
+    --text-color: #333;
+}
+
+.dark-mode {
+    --background-color: #333;
+    --text-color: #fff;
+}
+
 body {
     color: #333;
     font: 14px Sans-Serif;
     padding: 50px;
-    background: #eee;
+    background: var(--background-color);
 }
 
 h1 {
