--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ table tr td:first-of-type a[href$=".png"],
 table tr td:first-of-type a[href$=".gif"],
 table tr td:first-of-type a[href$=".svg"],
 table tr td:first-of-type a[href$=".jpeg"] {
-    background-image: url(./.image/images.png);
+    background-image: url(./.images/images.png);
 }
 
 
