--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ table tr td:first-of-type a[href$=".png"],
 table tr td:first-of-type a[href$=".gif"],
 table tr td:first-of-type a[href$=".svg"],
 table tr td:first-of-type a[href$=".jpeg"] {
-    background-image: url(./images/images.png);
+    background-image: url(./images/image.png);
 }
 
 
@@ -172,7 +172,7 @@ table tr td:first-of-type a[href$=".mp3"],
 table tr td:first-of-type a[href$=".ogg"],
 table tr td:first-of-type a[href$=".aac"],
 table tr td:first-of-type a[href$=".wma"] {
-    background-image: url(./.images/audio.png);
+    background-image: url(./images/audio.png);
 }
 
 
