--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ th a {
 td:first-of-type a {
     background: url(./images/file.png) no-repeat 10px 50%;
     padding-left: 35px;
+    background-size: 20px;
 }
 
 th:first-of-type {
