--- a/cdn/style.css
+++ b/cdn/style.css
@@ -88,7 +88,7 @@ th a {
 }
 
 td:first-of-type a {
-    background: url(./assets/file.png) no-repeat 10px 50%;
+    background: url(./assets/folder.png) no-repeat 10px 50%;
     background-size: 20px;
     padding-left: 35px;
 }
@@ -124,7 +124,7 @@ table tr td:first-of-type a[href$=".png"],
 table tr td:first-of-type a[href$=".gif"],
 table tr td:first-of-type a[href$=".svg"],
 table tr td:first-of-type a[href$=".jpeg"] {
-    background-image: url(./assets/folder.png);
+    background-image: url(./assets/image.png);
 }
 
 
