--- a/cdn/style.css
+++ b/cdn/style.css
@@ -33,7 +33,7 @@ body {
     font: 14px Sans-Serif;
     padding: 50px;
     background-color: var(--background-color);
-    color: var(--text-color);
+    color: var(--text-2);
 ;
 }
 
