--- a/cdn/style.css
+++ b/cdn/style.css
@@ -16,7 +16,7 @@
     right: 20px;
     padding: 10px;
     background-color: var(--toggle-btn);
-    color: var(--text-color);
+    color: var(--text-2);
     border: none;
     border-radius: 5px;
     cursor: pointer;
