--- a/cdn/style.css
+++ b/cdn/style.css
@@ -41,6 +41,7 @@ h1 {
     text-align: center;
     padding: 20px 0 12px 0;
     margin: 0;
+    color: var(--text-color);
     background-color: var(--text-2);
 }
 
