--- a/cdn/style.css
+++ b/cdn/style.css
@@ -9,7 +9,7 @@
     --text-2: #fff;
     --toggle-btn: #333;
     --tr-odd: #e6e6e6;
-    --tr-even: #333;
+    --tr-even: #fff;
 }
 /* Dark Mode */
 #mode-toggle {
