--- a/cdn/style.css
+++ b/cdn/style.css
@@ -168,6 +168,7 @@ table tr td:first-of-type a[href$=".gif"],
 table tr td:first-of-type a[href$=".svg"],
 table tr td:first-of-type a[href$=".tiff"],
 table tr td:first-of-type a[href$=".tif"],
+table tr td:first-of-type a[href$=".webp"],
 table tr td:first-of-type a[href$=".jpeg"] {
     background-image: var(--icon-image);
 }
