--- a/sites/lynnux/helper/discord/webhook/main.css
+++ b/sites/lynnux/helper/discord/webhook/main.css
@@ -14,7 +14,7 @@
         border: 1px solid #2C2F33;
         border-radius: 8px;
         box-sizing: border-box;
-        background-color: #2C2F33;
+        background-color: #dfdfdf;
         color: white;
     }
     
