--- a/sites/lynnux/helper/discord/webhook/main.css
+++ b/sites/lynnux/helper/discord/webhook/main.css
@@ -20,7 +20,7 @@
     
     input[type="button" i], input[type="submit" i], input[type="reset" i], input[type="file" i]::-webkit-file-upload-button, button {
         width: 100%;
-        background-color: #2C2F33;
+        background-color: #6e6e6e;
         color: white;
         padding: 4px 6px;
         margin: 1px 0;
